--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Learn2Launch Data Science
+description: Website for UC Berkeley's Learn2Launch Data Science 2017 course
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
